@@ -1,6 +1,6 @@
 % File src/library/utils/vignettes/Sweave.Rnw
 % Part of the R package, http://www.R-project.org
-% Copyright 2002-13 Friedrich Leisch and the R Core Team
+% Copyright 2002-2014 Friedrich Leisch and the R Core Team
 % Distributed under GPL 2 or later
 
 \documentclass[a4paper]{article}
